syntax = "proto3";

package api.login;
import "google/api/annotations.proto";

option go_package = "login_registration/api/login;login";
option java_multiple_files = true;
option java_package = "api.login";

service Login {
    rpc CreateLogin (CreateLoginRequest) returns (CreateLoginReply){
		option(google.api.http) = {
			post:"helloworld",
		};
	}
    rpc UpdateLogin (UpdateLoginRequest) returns (UpdateLoginReply){
		option(google.api.http) = {
			put:"helloworld/{name}",
		};
	}
    rpc DeleteLogin (DeleteLoginRequest) returns (DeleteLoginReply){
		option(google.api.http) = {
			delete:"helloworld/{name}",
		};
	}
    rpc GetLogin (GetLoginRequest) returns (GetLoginReply){
		option(google.api.http) = {
			get:"helloworld/{name}",
		};
	}
    rpc ListLogin (ListLoginRequest) returns (ListLoginReply){
		option(google.api.http) = {
			get:"helloworld",
		};
	}
}

message CreateLoginRequest {}
message CreateLoginReply {}

message UpdateLoginRequest {}
message UpdateLoginReply {}

message DeleteLoginRequest {}
message DeleteLoginReply {}

message GetLoginRequest {}
message GetLoginReply {}

message ListLoginRequest {}
message ListLoginReply {}